examples/test/testpolicy5416.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5416
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key0: value8
      key11: value27
      key26: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value16
      podSelector:
        matchLabels:
          key22: value39
